View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028734 | Open CASCADE | OCCT:Visualization | public | 2017-05-12 10:46 | 2017-09-29 16:25 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.6.0 | ||||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028734: Visualization, OpenGl_Texture - fix initialization of 1D texture | ||||
Description | GL_PROXY_TEXTURE_1D should be used instead of GL_PROXY_TEXTURE_2D in the following context:@@ -500,7 +512,7 @@ bool OpenGl_Texture::Init (const Handle(OpenGl_Context)& theCtx, glTexImage1D (GL_PROXY_TEXTURE_1D, 0, anIntFormat, theSizeX, 0, thePixelFormat, theDataType, NULL); glGetTexLevelParameteriv (GL_PROXY_TEXTURE_2D, 0, GL_TEXTURE_WIDTH, &aTestWidth); | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28734 has been created by kgv. SHA-1: 142fc79a19a406b3d048dc6d85abbf91bc19c225 Detailed log of new commits: Author: isk Date: Thu Apr 14 12:04:54 2016 +0300 0028734: Visualization, OpenGl_Texture - fix initialization of 1D texture OpenGl_Texture::Init() - fixed proxy check for 1D textures. Declarations.glsl - defined occTexture1D/3D aliases similar to occTexture2D. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR28734 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 142fc79a19a406b3d048dc6d85abbf91bc19c225 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1173 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92116425 / 91600714 [+0.56%] Total CPU difference: 19008.360000000303 / 18729.20000000028 [+1.49%] products component : Total MEMORY difference: 31331047 / 31317049 [+0.04%] Total CPU difference: 5475.87999999998 / 5416.239999999973 [+1.10%] Testing on Windows: occt component : Total MEMORY difference: 58431337 / 58426407 [+0.01%] Total CPU difference: 17599.096813998738 / 17338.309942298663 [+1.50%] products component : Total MEMORY difference: 22693837 / 22655560 [+0.17%] Total CPU difference: 5345.405465199979 / 5279.479442599965 [+1.25%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28734 is TESTED. |
|
Branch CR28734 has been deleted by kgv. SHA-1: 142fc79a19a406b3d048dc6d85abbf91bc19c225 |
occt: master ff6665dc 2016-04-14 09:04:54
Committer: bugmaster Details Diff |
0028734: Visualization, OpenGl_Texture - fix initialization of 1D texture OpenGl_Texture::Init() - fixed proxy check for 1D textures. Declarations.glsl - defined occTexture1D/3D aliases similar to occTexture2D. |
Affected Issues 0028734 |
|
mod - src/OpenGl/OpenGl_Texture.cxx | Diff File | ||
mod - src/Shaders/Declarations.glsl | Diff File | ||
mod - src/Shaders/Shaders_Declarations_glsl.pxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-05-12 10:46 | kgv | New Issue | |
2017-05-12 10:46 | kgv | Assigned To | => kgv |
2017-05-12 11:10 | git | Note Added: 0065868 | |
2017-05-12 11:11 | kgv | Note Added: 0065869 | |
2017-05-12 11:11 | kgv | Assigned To | kgv => bugmaster |
2017-05-12 11:11 | kgv | Status | new => resolved |
2017-05-12 11:11 | kgv | Status | resolved => reviewed |
2017-05-12 11:12 | kgv | Product Version | 7.1.0 => 6.6.0 |
2017-05-12 11:14 | kgv | Relationship added | child of 0023544 |
2017-05-12 12:33 |
|
Assigned To | bugmaster => mkv |
2017-05-12 21:17 |
|
Note Added: 0066057 | |
2017-05-12 21:18 |
|
Note Added: 0066058 | |
2017-05-12 21:18 |
|
Assigned To | mkv => bugmaster |
2017-05-12 21:18 |
|
Status | reviewed => tested |
2017-05-12 21:18 |
|
Test case number | => Not needed |
2017-05-19 13:25 | bugmaster | Changeset attached | => occt master ff6665dc |
2017-05-19 13:25 | bugmaster | Status | tested => verified |
2017-05-19 13:25 | bugmaster | Resolution | open => fixed |
2017-05-29 16:06 | git | Note Added: 0066771 | |
2017-09-29 16:18 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |