0028734: Visualization, OpenGl_Texture - fix initialization of 1D texture

OpenGl_Texture::Init() - fixed proxy check for 1D textures.
Declarations.glsl - defined occTexture1D/3D aliases similar to occTexture2D.